[tool.poetry]
name = "iters"
version = "0.16.1"
description = "Composable external iteration."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/iters"
repository = "https://github.com/nekitdev/iters"
documentation = "https://nekitdev.github.io/iters"

keywords = ["python", "iter", "iterator"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Chat = "https://nekit.dev/chat"
Issues = "https://github.com/nekitdev/iters/issues"

[[tool.poetry.packages]]
include = "iters"

[tool.poetry.dependencies]
python = ">= 3.8"

typing-aliases = ">= 1.7.1"
typing-extensions = ">= 4.10.0"

named = ">= 1.4.1"
orderings = ">= 1.3.1"

solus = ">= 1.2.2"

async-extensions = ">= 2.0.2"
mixed-methods = ">= 1.1.1"

[tool.poetry.group.format.dependencies]
ruff = "0.3.2"

[tool.poetry.group.check.dependencies]
mypy = "1.9.0"

[tool.poetry.group.check.dependencies.pre-commit]
version = "3.6.2"
python = ">= 3.9"

[tool.poetry.group.test.dependencies]
coverage = "7.4.3"
pytest = "8.1.1"
pytest-cov = "4.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.13"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "1.4.1"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E402",  # module level import not at top of file (circular import fixes)
]

[tool.pytest.ini_options]
addopts = "--cov iters"
testpaths = ["tests"]

[tool.coverage.run]
source = ["iters"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

[tool.changelogging]
name = "iters"
version = "0.16.1"
url = "https://github.com/nekitdev/iters"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
